--- a/app/views/layout.slim
+++ b/app/views/layout.slim
@@ -6,8 +6,8 @@ html
     meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
     title = settings.sitename
     meta name="viewport" content="width=device-width; initial-scale=1.0; minimum-scale=1.0; maximum-scale=1.0"
-    link type="text/css" rel="stylesheet" media="screen" href="/assets/bag.css"
+    link type="text/css" rel="stylesheet" media="screen" href="#{asset_path('bag.css')}"
   body
     == yield
     == settings.srcver[:html]
-    script type="text/javascript" src="/assets/bag.js"
+    script type="text/javascript" src="#{asset_path('bag.js')}"
