--- a/app/views/layout.slim
+++ b/app/views/layout.slim
@@ -9,5 +9,5 @@ html
     link type="text/css" rel="stylesheet" media="screen" href="#{asset_path('bag.css')}"
   body
     == yield
-    == settings.srcver[:html]
+    == srcver[:html]
     script type="text/javascript" src="#{asset_path('bag.js')}"
